native balance flicker fix

--- a/react/src/styles/index.scss
+++ b/react/src/styles/index.scss
@@ -82,6 +82,11 @@ body {
   cursor: hand;
 }
 
+#easydex-header-div {
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
 /*.toaster .single-toast:nth-child(0) {
   bottom: 12px;
 }
